...
            <point key="canvasLocation" x="4838" y="1279"/>
        </scene>
        <!--Practice-->
        <scene sceneID="sVd-YP-YMx">
            <objects>
                <navigationController id="0hi-EI-56a" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Practice" image="plus-simple-7" id="rDh-T8-eab"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Hwc-q1-6IJ">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="KUY-ER-4Nj" kind="relationship" relationship="rootViewController" id="JOI-kz-ebG"/>
...
                            <constraint firstItem="rKB-oE-Mrx" firstAttribute="bottom" secondItem="Tjt-JH-agn" secondAttribute="bottom" constant="184" id="thb-bX-29H"/>
                            <constraint firstItem="CDf-DG-hMF" firstAttribute="top" secondItem="emf-m9-nwU" secondAttribute="bottom" constant="8" symbolic="YES" id="vai-BM-b88"/>
                            <constraint firstItem="emf-m9-nwU" firstAttribute="top" secondItem="rKB-oE-Mrx" secondAttribute="top" constant="60" id="vjM-8j-i8j"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="rKB-oE-Mrx"/>
                    </view>
                    <navigationItem key="navigationItem" title="Swings" id="y3Q-Cy-kcJ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wgu-ru-hEf">
                            <connections>
                                <action selector="addSwing:" destination="iQd-DM-fCA" id="WcI-hF-DRK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
